kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolioapp
  template:
    metadata:
      labels:
        app: portfolioapp
    spec:
      containers:
      - name: portfolioapp
        image: nancysilviya/portfolio 
        ports:
        - containerPort: 80
