kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolioapp-service
spec:
  selector:
    app: portfolioapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort  # Required for ALB integration
